@@ -7,9 +7,9 @@ ContainerFilter_PRINCIPAL_CLASS = ContainerSelector
 
 ADDITIONAL_INCLUDE_DIRS = -I../General
 ifeq ($(FOUNDATION_LIB), apple)
-LDFLAGS += -framework General
+LDFLAGS += -F../General -framework General
 else
-LDFLAGS += -lGeneral
+#LDFLAGS += -lGeneral
 endif
 
 ContainerFilter_RESOURCE_FILES = \
