@@ -8,9 +8,9 @@ BUNDLE_NAME = ImbricationFilter
 
 ADDITIONAL_INCLUDE_DIRS = -I../General.bproj
 ifeq ($(FOUNDATION_LIB), apple)
-LDFLAGS += -framework General
+LDFLAGS += -F../General -framework General
 else
-LDFLAGS += -lGeneral
+#LDFLAGS += -lGeneral
 endif
 
 ImbricationFilter_RESOURCE_FILES = \
