@@ -34,9 +34,9 @@ PajeSimulator_PRINCIPAL_CLASS=PajeSimul
 
 PajeSimulator_LIBRARIES_DEPEND_UPON += 
 ifeq ($(FOUNDATION_LIB), apple)
-LDFLAGS += -framework General
+LDFLAGS += -F../General -framework General
 else
-LDFLAGS += -lGeneral
+#LDFLAGS += -lGeneral
 endif
 
 #
