@@ -8,9 +8,9 @@ StatViewer_PRINCIPAL_CLASS = StatViewer
 
 ADDITIONAL_INCLUDE_DIRS = -I../General
 ifeq ($(FOUNDATION_LIB), apple)
-LDFLAGS += -framework General
+LDFLAGS += -F../General -framework General
 else
-LDFLAGS += -lGeneral
+#LDFLAGS += -lGeneral
 endif
 
 StatViewer_RESOURCE_FILES = \
